src/tests/snapshots/mdbook_pandoc__tests__books__mdbook_guide.snap
---
source: src/tests/books.rs
expression: logs
snapshot_kind: text
---
 INFO mdbook_driver::mdbook: Running the pandoc backend    
 INFO mdbook_pandoc::pandoc::renderer: Running pandoc    
 INFO mdbook_pandoc::pandoc::renderer: Wrote output to book/pdf/book.pdf
