src/tests/snapshots/mdbook_pandoc__tests__books__nomicon.snap
---
source: src/tests/books.rs
expression: logs
snapshot_kind: text
---
 INFO mdbook_driver::mdbook: Running the pandoc backend    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../book/index.html' in chapter 'intro.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../book/index.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../book/index.html' in chapter 'intro.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../book/index.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../reference/index.html' in chapter 'intro.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../reference/index.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/primitive.slice.html#method.get_unchecked' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/primitive.slice.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/marker/trait.Send.html' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/marker/trait.Send.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/primitive.slice.html#method.get_unchecked' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/primitive.slice.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/mem/fn.transmute.html' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/mem/fn.transmute.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/primitive.pointer.html#method.offset' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/primitive.pointer.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/primitive.pointer.html#method.offset' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/primitive.pointer.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/marker/trait.Send.html' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/marker/trait.Send.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/marker/trait.Sync.html' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/marker/trait.Sync.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/alloc/trait.GlobalAlloc.html' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/alloc/trait.GlobalAlloc.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/cmp/trait.PartialOrd.html' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/cmp/trait.PartialOrd.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/cmp/trait.Ord.html' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/cmp/trait.Ord.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/collections/struct.BTreeMap.html' in chapter 'safe-unsafe-meaning.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/collections/struct.BTreeMap.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../reference/attributes/codegen.html#the-target_feature-attribute' in chapter 'what-unsafe-does.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../reference/attributes/codegen.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/ptr/struct.NonNull.html' in chapter 'what-unsafe-does.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/ptr/struct.NonNull.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../reference/behavior-considered-undefined.html' in chapter 'what-unsafe-does.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../reference/behavior-considered-undefined.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../reference/behavior-not-considered-unsafe.html' in chapter 'what-unsafe-does.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../reference/behavior-not-considered-unsafe.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../reference/type-layout.html' in chapter 'data.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../reference/type-layout.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/primitive.slice.html' in chapter 'exotic-sizes.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/primitive.slice.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/primitive.str.html' in chapter 'exotic-sizes.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/primitive.str.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/alloc/trait.GlobalAlloc.html#tymethod.alloc' in chapter 'exotic-sizes.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/alloc/trait.GlobalAlloc.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/cell/struct.UnsafeCell.html' in chapter 'other-reprs.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/cell/struct.UnsafeCell.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/cell/struct.UnsafeCell.html' in chapter 'other-reprs.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/cell/struct.UnsafeCell.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../reference/subtyping.html#variance' in chapter 'subtyping.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../reference/subtyping.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/mem/struct.ManuallyDrop.html' in chapter 'dropck.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/mem/struct.ManuallyDrop.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../core/marker/struct.PhantomPinned.html' in chapter 'phantom-data.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../core/marker/struct.PhantomPinned.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../reference/type-coercions.html#coercion-types' in chapter 'coercions.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../reference/type-coercions.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../book/ch19-03-advanced-traits.html#fully-qualified-syntax-for-disambiguation-calling-methods-with-the-same-name' in chapter 'dot-operator.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../book/ch19-03-advanced-traits.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/ops/trait.Index.html' in chapter 'dot-operator.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/ops/trait.Index.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/clone/trait.Clone.html#derivable' in chapter 'dot-operator.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/clone/trait.Clone.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../reference/expressions/operator-expr.html#type-cast-expressions' in chapter 'casts.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../reference/expressions/operator-expr.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../reference/expressions/operator-expr.html#semantics' in chapter 'casts.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../reference/expressions/operator-expr.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/mem/fn.transmute.html' in chapter 'transmutes.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/mem/fn.transmute.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/mem/fn.transmute_copy.html' in chapter 'transmutes.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/mem/fn.transmute_copy.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../core/mem/union.MaybeUninit.html' in chapter 'unchecked-uninit.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../core/mem/union.MaybeUninit.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../core/mem/union.MaybeUninit.html#method.assume_init' in chapter 'unchecked-uninit.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../core/mem/union.MaybeUninit.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../core/ptr/index.html' in chapter 'unchecked-uninit.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../core/ptr/index.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../core/ptr/fn.write.html' in chapter 'unchecked-uninit.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../core/ptr/fn.write.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/ptr/fn.copy.html' in chapter 'unchecked-uninit.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/ptr/fn.copy.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/ptr/fn.copy_nonoverlapping.html' in chapter 'unchecked-uninit.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/ptr/fn.copy_nonoverlapping.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../core/ptr/macro.addr_of_mut.html' in chapter 'unchecked-uninit.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../core/ptr/macro.addr_of_mut.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../../std/ptr/struct.NonNull.html' in chapter 'vec/vec-layout.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/vec/../../std/ptr/struct.NonNull.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../../alloc/alloc/fn.alloc.html' in chapter 'vec/vec-alloc.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/vec/../../alloc/alloc/fn.alloc.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../../alloc/alloc/fn.realloc.html' in chapter 'vec/vec-alloc.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/vec/../../alloc/alloc/fn.realloc.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../../alloc/alloc/fn.dealloc.html' in chapter 'vec/vec-alloc.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/vec/../../alloc/alloc/fn.dealloc.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../../alloc/alloc/index.html' in chapter 'vec/vec-alloc.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/vec/../../alloc/alloc/index.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../../std/alloc/struct.Global.html' in chapter 'vec/vec-alloc.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/vec/../../std/alloc/struct.Global.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../../alloc/alloc/fn.handle_alloc_error.html' in chapter 'vec/vec-alloc.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/vec/../../alloc/alloc/fn.handle_alloc_error.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/ops/trait.Drop.html' in chapter 'ffi.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/ops/trait.Drop.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/panic/fn.catch_unwind.html' in chapter 'ffi.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/panic/fn.catch_unwind.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/panic/fn.catch_unwind.html' in chapter 'ffi.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/panic/fn.catch_unwind.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../std/panic/fn.catch_unwind.html' in chapter 'ffi.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../std/panic/fn.catch_unwind.html'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../core/panic/struct.PanicInfo.html' in chapter 'panic-handler.md', linking to hosted HTML book at 'https://doc.rust-lang.org/nomicon/../core/panic/struct.PanicInfo.html'    
 INFO mdbook_pandoc::pandoc::renderer: Running pandoc    
 INFO mdbook_pandoc::pandoc::renderer: Wrote output to book/pdf/book.pdf
