src/tests/snapshots/mdbook_pandoc__tests__books__rust_by_example.snap
---
source: src/tests/books.rs
expression: logs
snapshot_kind: text
---
 INFO mdbook_driver::mdbook: Running the pandoc backend    
 INFO mdbook_pandoc::pandoc::renderer: Running pandoc    
[WARNING] [makePDF] LaTeX Warning: Hyper reference
  `book__pdf__src__std__result__question_mark.md' on $PAGE
  undefined on input $LINE.
[WARNING] [makePDF] LaTeX Warning: There were undefined references.
[WARNING] Missing character: There is no 🛈 (U+1F6C8) (U+1F6C8) in font NotoSerif:mode=node;script
[WARNING] Missing character: There is no 🛈 (U+1F6C8) (U+1F6C8) in font NotoSerif:mode=node;script
 INFO mdbook_pandoc::pandoc::renderer: Wrote output to book/pdf/book.pdf
