src/tests/snapshots/mdbook_pandoc__tests__books__rust_embedded.snap
---
source: src/tests/books.rs
expression: logs
snapshot_kind: text
---
 INFO mdbook_driver::mdbook: Running the pandoc backend    
 INFO mdbook_pandoc::pandoc::renderer: Running pandoc    
[WARNING] Missing character: There is no ✘ (U+2718) (U+2718) in font NotoSerif:mode=node;script=l
[WARNING] Missing character: There is no ✘ (U+2718) (U+2718) in font NotoSerif:mode=node;script=l
[WARNING] Missing character: There is no ✘ (U+2718) (U+2718) in font NotoSerif:mode=node;script=l
[WARNING] Missing character: There is no ✘ (U+2718) (U+2718) in font NotoSerif:mode=node;script=l
 INFO mdbook_pandoc::pandoc::renderer: Wrote output to book/pdf/book.pdf
