src/tests/snapshots/mdbook_pandoc__tests__books__rustc_dev_guide.snap
---
source: src/tests/books.rs
expression: logs
snapshot_kind: text
---
<<<<<<< HEAD
||||||| parent of 4c7cc1c (chore(deps)!: upgrade mdbook to v0.5.0)
 WARN mdbook::preprocess::cmd: The command wasn't found, is the "mermaid" preprocessor installed?
 WARN mdbook::preprocess::cmd: 	Command: mdbook-mermaid
=======
<<<<<<< HEAD
 WARN mdbook::preprocess::cmd: The command wasn't found, is the "mermaid" preprocessor installed?
 WARN mdbook::preprocess::cmd: 	Command: mdbook-mermaid
>>>>>>> 4c7cc1c (chore(deps)!: upgrade mdbook to v0.5.0)
 INFO mdbook::book: Running the pandoc backend
 INFO mdbook_pandoc::pandoc::renderer: Running pandoc
||||||| parent of 8c10a4f (chore(deps)!: upgrade mdbook to v0.5.0)
 WARN mdbook::preprocess::cmd: The command wasn't found, is the "mermaid" preprocessor installed?    
 WARN mdbook::preprocess::cmd: 	Command: mdbook-mermaid    
 WARN mdbook::preprocess::cmd: The command wasn't found, is the "toc" preprocessor installed?    
 WARN mdbook::preprocess::cmd: 	Command: mdbook-toc    
 INFO mdbook::book: Running the pandoc backend    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../early-late-bound-params/early-late-bound-summary.md' in chapter 'ty_module/param_ty_const_regions.md', linking to hosted HTML book at 'https://rustc-dev-guide.rust-lang.org/ty_module/../early-late-bound-params/early-late-bound-summary.md'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../early-late-bound-params/early-late-bound-summary.md' in chapter 'ty_module/param_ty_const_regions.md', linking to hosted HTML book at 'https://rustc-dev-guide.rust-lang.org/ty_module/../early-late-bound-params/early-late-bound-summary.md'    
 INFO mdbook_pandoc::pandoc::renderer: Running pandoc    
=======
 WARN mdbook_driver::builtin_preprocessors::cmd: The command wasn't found, is the "mermaid" preprocessor installed?    
 WARN mdbook_driver::builtin_preprocessors::cmd: 	Command: mdbook-mermaid    
 WARN mdbook_driver::builtin_preprocessors::cmd: The command wasn't found, is the "toc" preprocessor installed?    
 WARN mdbook_driver::builtin_preprocessors::cmd: 	Command: mdbook-toc    
 INFO mdbook_driver::mdbook: Running the pandoc backend    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../early-late-bound-params/early-late-bound-summary.md' in chapter 'ty_module/param_ty_const_regions.md', linking to hosted HTML book at 'https://rustc-dev-guide.rust-lang.org/ty_module/../early-late-bound-params/early-late-bound-summary.md'    
 INFO mdbook_pandoc::preprocess: Failed to resolve link '../early-late-bound-params/early-late-bound-summary.md' in chapter 'ty_module/param_ty_const_regions.md', linking to hosted HTML book at 'https://rustc-dev-guide.rust-lang.org/ty_module/../early-late-bound-params/early-late-bound-summary.md'    
 INFO mdbook_pandoc::pandoc::renderer: Running pandoc    
>>>>>>> 8c10a4f (chore(deps)!: upgrade mdbook to v0.5.0)
[WARNING] [makePDF] LaTeX Warning: Label
  `book__pandoc__pdf__src__traits__goals-and-clauses.md__domain-goals'
  multiply defined.
[WARNING] [makePDF] LaTeX Warning: Label
  `book__pandoc__pdf__src__borrow_check__region_inference.md__region-variables'
  multiply defined.
[WARNING] [makePDF] LaTeX Warning: Hyper reference
  `book__pandoc__pdf__src__building__how-to-build-and-run.md__toolchain'
  on $PAGE undefined on input $LINE.
[WARNING] [makePDF] LaTeX Warning: Hyper reference
  `book__pandoc__pdf__src__parallel-rustc.md__Codegen' on $PAGE undefined on input $LINE.
[WARNING] [makePDF] LaTeX Warning: Hyper reference
  `book__pandoc__pdf__src__hir.md__the-hir-map' on $PAGE
  undefined on input $LINE.
[WARNING] [makePDF] LaTeX Warning: Hyper reference
  `book__pandoc__pdf__src__query.md__adding-a-new-kind-of-query'
  on $PAGE undefined on input $LINE.
[WARNING] [makePDF] LaTeX Warning: Hyper reference
  `book__pandoc__pdf__src__diagnostics.md__future-incompatible'
  on $PAGE undefined on input $LINE.
[WARNING] [makePDF] LaTeX Warning: Hyper reference
  `book__pandoc__pdf__src__ty_module__generic_arguments.md__genericargkind'
  on $PAGE undefined on input $LINE.
[WARNING] [makePDF] LaTeX Warning: Hyper reference
  `book__pandoc__pdf__src__llvm-coverage-instrumentation.md__recommended-configtoml-settings'
  on $PAGE undefined on input $LINE.
[WARNING] [makePDF] LaTeX Warning: Hyper reference
  `book__pandoc__pdf__src__appendix__glossary.md__TyCtxt' on
  $PAGE undefined on input $LINE.
[WARNING] [makePDF] LaTeX Warning: Hyper reference
  `book__pandoc__pdf__src__appendix__background.md__what-is-a-debruijn-index'
  on $PAGE undefined on input $LINE.
[WARNING] [makePDF] LaTeX Warning: There were undefined references.
[WARNING] [makePDF] LaTeX Warning: There were multiply-defined labels.
 INFO mdbook_pandoc::pandoc::renderer: Wrote output to book/pandoc/pdf/book.pdf
